<resources>
    <string name="app_name">CocktailTemplate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cocktail_category">Category:</string>
    <string name="cocktail_glass">Served in:</string>
    <string name="cocktail_instructions">Instructions:</string>
    <string name="cocktail_ingredients">Ingrédients:</string>
    <string name="recherche_tab">Recherche</string>
    <string name="categories_tab">Catégories</string>
    <string name="ingredients_tab">Ingrédients</string>
    <string name="search_view_placeholder">Rechercher...</string>
    <string name="no_cocktail_found">Aucun cocktail trouvé...</string>
    <string name="cocktail_name">{cocktailName}</string>
    <string name="title_error">Erreur</string>
    <string name="message_error">Une erreur s\'est produite.</string>
    <string name="retry_error">Réessayer</string>
</resources>