<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cocktaildetails.CocktailDetail">

    <ImageView
        android:id="@+id/cocktail_photo_detail"
        style="@style/description_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_not_load"></ImageView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cocktail_category_card"
        style="@style/title_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cocktail_photo_detail"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/cocktail_category_detail"
                style="@style/description_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cocktail_category"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/cocktail_photo_detail" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/cocktail_category_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cocktail"
                app:layout_constraintTop_toBottomOf="@id/cocktail_photo_detail" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cocktail_glass_card"
        style="@style/title_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cocktail_category_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/cocktail_glass_detail"
                style="@style/description_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cocktail_glass"
                android:textStyle="bold"
                />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/cocktail_glass_value"
                style="@style/description_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Glass" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cocktail_instruction_card"
        style="@style/title_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cocktail_glass_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Titre de la section des instructions -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/cocktail_instruction_title_detail"
                style="@style/description_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cocktail_instructions"
                android:textStyle="bold" />

            <!-- Ligne horizontale en tant que séparateur -->
            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/cocktail_instruction_title_detail_hr"
                style="@style/description_display"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#A8A8A8" />

            <!-- Texte des instructions -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/cocktail_instruction_detail"
                style="@style/description_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Instructions"
                app:layout_constraintTop_toBottomOf="@id/cocktail_instruction_title_detail_hr" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cocktail_ingredients_card"
        style="@style/title_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cocktail_instruction_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Titre de la section des ingrédients -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/cocktail_ingredients_title_detail"
                style="@style/description_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cocktail_ingredients"
                android:textStyle="bold" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/cocktail_ingredients_title_detail_hr"
                style="@style/description_display"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#A8A8A8"
                app:layout_constraintTop_toBottomOf="@id/cocktail_instruction_title_detail" />
            <!-- Liste des ingrédients -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/cocktail_ingredients_detail"
                style="@style/description_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="- Ingrédients 0 \n- Ingrédients 1 \n- Ingrédients 2" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>